lab3/Lawn-errs.
Lawn.java:21: error: ';' expected
    int h, m, s
               ^
1 error
